--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postbuild": "purgecss -css ./dist/recipe-book-app/browser/*.css --content ./dist/recipe-book-app/browser/index.html ./dist/recipe-book-app/browser/*.js -o ./dist/recipe-book-app/browser"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -21,7 +21,6 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -38,6 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "purgecss": "^6.0.0",
     "typescript": "~5.4.2"
   }
 }
